# video-app

./: CMakeLists.txt
assets/: GEFN0004 Good_Segment_0_x264mp4.txt
cmake/: compiler.conf.cmake  system.cmake
include/: filesystem.h  post_processor.h  render_object.h  resource_manager.h  shader.h  sprite_renderer.h  texture.h  video_app_renderer.h  video_reader.hpp
shaders/: post_processing.fs  post_processing.vs  sprite.fs
src/: main.cpp  post_processor.cpp  render_object.cpp  resource_manager.cpp  sprite_renderer.cpp  text_renderer.cpp  texture.cpp  video_app_renderer.cpp  video_reader.cpp
